# acorn-prem-be

./: .env-example  .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/core/: config.py  deps.py  rate_limit.py  security.py
app/db/: base.py
app/db/models/: blog.py  booking.py  category.py  email_log.py  user.py
app/repositories/: blog_repo.py  booking_repo.py  category_repo.py  email_repo.py  user_repo.py
app/routers/: auth.py  blog.py  booking.py  categories.py  email.py  public_blogs.py  public_categories.py  users.py
app/schemas/: auth.py  blog.py  booking.py  category.py  email.py  user.py
app/services/: auth_service.py  blog_service.py  booking_service.py  category_service.py  email_service.py
